add form on new_homework

--- a/app/views/teacher/new_homework.erb
+++ b/app/views/teacher/new_homework.erb
@@ -1,1 +1,8 @@
 <h1>where teachers will create new homework</h1>
+<form class="" action="index.html" method="post">
+  <label>Title</label>
+  <input type="text" name="title" value="">
+  <label>Notes</label>
+  <input type="text" name="note" value="">
+  <input type="button" value="submit">
+</form>
