add form for teach to create a Homework object on erb /teacher/new_homework

--- a/app/views/teacher/homework.erb
+++ b/app/views/teacher/homework.erb
@@ -1,1 +1,5 @@
 <h1>This is where a teacher can see all of a students homework</h1>
+
+<% @teacher.students.map do |student| %>
+  <li><a href="/teacher/students/<%= student.id %>/new_homework"><%= student.name %></a></li>
+<% end %>
