--- a/app/views/teacher/new_student.erb
+++ b/app/views/teacher/new_student.erb
@@ -1,1 +1,30 @@
-<h1>Where teachers added a new student</h1>
+<h1>This is where a teaher adds new students.</h1>
+
+<% if @student.errors.any? %>
+  <div>
+    <strong>Some issues with your entry, please fix them:</strong>
+    <ul>
+      <% @student.errors.full_messages.each do |student| %>
+        <li><%= student %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+
+<form method="post" action="/teacher/students">
+  <div>
+    <label>Student Name:</label>
+    <input type="text" name="name" value="<%= @student.name %>">
+  </div>
+  <div>
+    <label>Username:</label>
+    <input type="text" name="username" value="<%= @student.username %>">
+  </div>
+  <div>
+    <label>Password:</label>
+    <input type="text" name="password" value="<%= @student.password %>">
+  </div>
+  <div>
+    <input type="submit" value="Create" >
+  </div>
+</form>
