Add features: student can view all homework and student can view individual homework

--- a/app/views/student/show.erb
+++ b/app/views/student/show.erb
@@ -1,1 +1,7 @@
 <h1>This is where a student will see the details of a specific weeks homeowork</h1>
+
+<ul>
+  <%= @homework.title %>
+  <%= @homework.note %>
+  <%= @homework.tasks %>
+</ul>
