--- a/app/views/student/index.erb
+++ b/app/views/student/index.erb
@@ -1,1 +1,7 @@
 <h1>This is where a student will see all assignemnts</h1>
+
+<ul>
+ <% current_user.homeworks.map do |homework| %>
+   <li><a href="/student/homework/<%= homework.id %>"><%= homework.title %></a></li>
+ <% end %>
+</ul>
