add 'new student' && 'Show students homework' &&  'student homework  details'

--- a/app/views/teacher/homework.erb
+++ b/app/views/teacher/homework.erb
@@ -1,5 +1,7 @@
 <h1>This is where a teacher can see all of a students homework</h1>
-
-<% @teacher.students.map do |student| %>
-  <li><a href="/teacher/students/<%= student.id %>/new_homework"><%= student.name %></a></li>
-<% end %>
+<a href="/teacher/students/<%= @student.id %>/homework/new">give them more work!</a>
+<ul>
+  <% @student.homeworks.map do |homework| %>
+    <li><a href="/teacher/students/<%= @student.id %>/homework/<%= homework.id %>"><%= homework.title %></a></li>
+  <% end %>
+</ul>
