--- a/app/views/teacher/new_homework.erb
+++ b/app/views/teacher/new_homework.erb
@@ -1,17 +1,26 @@
 <h1>where teachers will create new homework</h1>
-<form class="" action="/homework/new" method="post">
-  <label>Title</label>
-  <input type="text" name="title" value="">
-  <label>Notes</label>
-  <input type="text" name="note" value="">
-  <input type="hidden" name="user_id" value="<%= @student.id %>">
-  <input type="submit" value="submit">
-</form>
+<% if params[:homework].nil? %>
+  <form class="" action="/homework/new" method="post">
+    <label>Title</label>
+    <input type="text" name="title" value="">
+    <label>Notes</label>
+    <input type="text" name="note" value="">
+    <input type="hidden" name="user_id" value="<%= @student.id %>">
+    <input type="submit" value="submit">
+  </form>
+  <% else %>
+  <h4><%= @homework.title %></h4>
+  <% end %>
 <br>
-<form class="" action="/homework/<%= Homework.find(1).id %>/task" method="post">
-  <label>New task</label>
-  <input type="text" name="item" value="">
-  <label>Link</label>
-  <input type="text" name="url" value="">
-  <input type="submit" value="submit">
-</form>
+<%  unless params[:homework].nil? %>
+  <% @homework.tasks.map do |task| %>
+    <li><%= task.item %></li>
+  <% end %>
+  <form class="" action="/homework/<%= @homework.id %>/task?user_id=<%= @student.id %>" method="post">
+    <label>New task</label>
+    <input type="text" name="item" value="">
+    <label>Link</label>
+    <input type="text" name="url" value="">
+    <input type="submit" value="submit">
+  </form>
+<% end %>
