remove @teacher from teacher/stdent/:id gets && push update @homework =  params[:homework] for teacher/student/:id/homework/:id

--- a/app/views/teacher/student_homework.erb
+++ b/app/views/teacher/student_homework.erb
@@ -3,5 +3,8 @@
 <ul>
   <%= @homework.title %>
   <%= @homework.note %>
-  <%= @homework.tasks %>
 </ul>
+
+<% @task.each do |task| %>
+    <li><%= task.item %></li>
+<% end %>
