--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!--
-    normalize.css removes cross-browser differences in defaults, e.g.,
-    differences in how form elements appear between Firefox and IE
-    See: http://necolas.github.com/normalize.css/
-  -->
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="/stylesheets/normalize.css">
-  <!--
-    application.css is where you put your styles
-  -->
+  <link type="text/css" rel="stylesheet" href="stylesheets/materialize.css"  media="screen,projection"/>
   <link rel="stylesheet" href="/stylesheets/application.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/javascript/application.js"></script>
+  <script type="text/javascript" src="javascript/materialize.js"></script>
 
   <title></title>
 </head>
@@ -21,4 +17,3 @@
   <%= yield %>
 </body>
 </html>
-
