--- a/app/views/teacher/student_homework.erb
+++ b/app/views/teacher/student_homework.erb
@@ -18,6 +18,9 @@
 <% @homework.comments.each do |comment| %>
   <h3><%= comment.user.name %> says:</h3>
   <p><%= comment.feedback %><p>
+  <% if comment.url and comment.url != "" %>
+    <a href="<%= comment.url %>">check this out</a>
+  <% end %>
 <% end %>
 
 <form method="post" action="/teacher/students/homework/new_comment">
