--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -3,8 +3,8 @@
 <head>
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="/stylesheets/normalize.css">
-  <link type="text/css" rel="stylesheet" href="stylesheets/materialize.css"  media="screen,projection"/>
-  <link rel="stylesheet" href="/stylesheets/application.css">
+  <link type="text/css" rel="stylesheet" href="/stylesheets/materialize.css"  media="screen,projection"/>
+  <!-- <link rel="stylesheet" href="/stylesheets/application.css"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -14,6 +14,51 @@
   <title></title>
 </head>
 <body>
-  <%= yield %>
+  <div class="navbar-fixed">
+    <nav class="blue lighten-2">
+      <div class="container">
+        <div class="nav-wrapper">
+          <a href="/" class="brand-logo">Logo</a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <% if not_logged_in %>
+              <li class="blue darken-2"><a href="/login">login</a></li>
+            <% else %>
+              <% if teacher? %>
+                <li><a href="/teacher/students">STUDENTS</a></li>
+                <li class="blue darken-2"><a href="/logout">LOGOUT</a></li>
+              <% else %>
+                <li><a href="/student">HOMEWORK</a></li>
+                <li class="blue darken-2"><a href="/logout">LOGOUT</a></li>
+              <% end %>
+            <% end %>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
+  <div class="container">
+    <%= yield %>
+  </div>
+  <footer class="page-footer blue-grey darken-3">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">Why this site!</h5>
+          <p class="grey-text text-lighten-4">This is a great tool for you to learn to KILL it on your instrument</p>
+        </div>
+        <div class="col l4 offset-l2 s12">
+          <h5 class="white-text">Links</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="/logout">Logout</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright blue-grey darken-4">
+      <div class="container">
+      © 2016 Muse Corp
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
