--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -31,6 +31,7 @@
               <% else %>
                 <li><a href="/student">HOMEWORK</a></li>
                 <li class="blue darken-2"><a href="/logout">LOGOUT</a></li>
+                <li class="nav-username"><%= current_user.name %></li>
               <% end %>
             <% end %>
           </ul>
