--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -13,7 +13,7 @@
 
   <title></title>
 </head>
-<main>
+<main class="grey lighten-5">
   <div class="navbar-fixed">
     <nav class="blue lighten-2">
       <div class="container">
