--- a/app/views/teacher/index.erb
+++ b/app/views/teacher/index.erb
@@ -1,7 +1,21 @@
-<h1>I am logged in as a Teacher. These are all my Students.</h1>
-
-<h2><a href="/teacher/students/new">Add New Student</a></h2>
-
+<h2 class="center">all of your wonderful students</h2>
+<div class="row">
+  <div class="col s6 offset-s2">
+    <a class="btn-floating waves-effect waves-light green" href="/teacher/students/new"><i class="material-icons">add</i></a>
+    <span class="button-text">Add New Student</span>
+  </div>
+</div>
 <% current_user.students.each do | student | %>
-  <h3><a href="/teacher/students/<%= student.id %>"><%= student.name %></a></h3>
+  <div class="row">
+    <div class="col s8 offset-s2">
+      <div class="card-panel">
+        <span class="">
+          <blockquote class="">
+            <h5><%= student.name %></h5>
+          </blockquote>
+          <a href="/teacher/students/<%= student.id %>">view student <i class="material-icons right">send</i></a>
+        </span>
+      </div>
+    </div>
+  </div>
 <% end %>
