--- a/app/views/_student_homework.erb
+++ b/app/views/_student_homework.erb
@@ -1,3 +1,5 @@
+<h3><a href="/teacher/students/<%= homework.user.id %>">Go back </a></h3>
+
 <h1><%= homework.title %></h1>
 
 <h2>Notes from lesson</h2>
