add teacher button for completing the 'add new homework'

--- a/app/views/teacher/new_homework.erb
+++ b/app/views/teacher/new_homework.erb
@@ -23,4 +23,5 @@
     <input type="text" name="url" value="">
     <input type="submit" value="submit">
   </form>
+  <a href="/teacher/students">FINISHED</a>
 <% end %>
