--- a/app/views/teacher/homework.erb
+++ b/app/views/teacher/homework.erb
@@ -1,7 +1,31 @@
-<h1>This is where a teacher can see all of a students homework</h1>
-<a href="/teacher/students/<%= @student.id %>/homework/new">give them more work!</a>
+<h3 class="center"><%= @student.name %>'s homework assignments:</h3>
+<div class="row">
+  <div class="col s6 offset-s2">
+    <a class="btn-floating waves-effect waves-light green" href="/teacher/students/<%= @student.id %>/homework/new"><i class="material-icons">assignment</i></a>
+    <span class="button-text">give them more work!</span>
+  </div>
+</div>
 <ul>
   <% @student.homeworks.map do |homework| %>
-    <li><a href="/teacher/students/<%= @student.id %>/homework/<%= homework.id %>"><%= homework.title %></a></li>
+    <div class="row">
+      <div class="col s10 offset-s1">
+        <div class="card-panel">
+          <span class="">
+            <blockquote class="">
+              <h5><%= homework.title %></h5>
+              <p>
+                <%= homework.note %>
+              </p>
+              <p>
+                <%= homework.tasks.count %> tasks assigned
+              </p>
+            </blockquote>
+            <div class="card-action">
+              <a class="link-text" href="/teacher/students/<%= @student.id %>/homework/<%= homework.id %>">View Homework <i class="material-icons right">trending_flat</i></a>
+            </div>
+          </span>
+        </div>
+      </div>
+    </div>
   <% end %>
 </ul>
