--- a/app/views/_student_homework.erb
+++ b/app/views/_student_homework.erb
@@ -18,7 +18,7 @@
       <% end %>
       <p>
         <%= task.item %> <br>
-        <a class="" href="<%= task.url %>">somthing</a>
+        <a class="" href="<%= task.url %>">something</a>
       </p>
     </li>
   <% end %>
