--- a/app/views/_student_homework.erb
+++ b/app/views/_student_homework.erb
@@ -3,26 +3,28 @@
 <h5 class="button-spacing"><strong>Notes from lesson</strong></h5>
 <p><%= homework.note %></p>
 <h5 class="button-spacing"><strong>Tasks for the homework</strong></h5>
-<ul class="collection">
-  <% homework.tasks.each do |task| %>
-    <li class="collection-item">
-      <% if current_user.role == 'S' %>
-        <input class="toggle-task-status"
-               type="checkbox"
-               name="<%= task.id %>"
-               id="<%= task.id %>"
-               <%= if task.complete then "checked" end %> >
-        <label for="<%= task.id %>"></label>
-      <% elsif task.complete %>
-         <i class="material-icons right done-icon">done_all</i>
-      <% end %>
-      <p>
-        <%= task.item %> <br>
-        <a class="" href="<%= task.url %>">something</a>
-      </p>
-    </li>
-  <% end %>
-</ul>
+<div class="button-spacing">
+  <ul class="collection">
+    <% homework.tasks.each do |task| %>
+      <li class="collection-item">
+        <% if current_user.role == 'S' %>
+          <input class="toggle-task-status"
+                 type="checkbox"
+                 name="<%= task.id %>"
+                 id="<%= task.id %>"
+                 <%= if task.complete then "checked" end %> >
+          <label for="<%= task.id %>"></label>
+        <% elsif task.complete %>
+           <i class="material-icons right done-icon">done_all</i>
+        <% end %>
+        <p>
+          <%= task.item %> <br>
+          <a class="" href="<%= task.url %>"><%= youtubify %></a>
+        </p>
+      </li>
+    <% end %>
+  </ul>
+</div>
 
 <% homework.comments.each do |comment| %>
   <h3><%= comment.user.name %> says:</h3>
