--- a/app/views/_student_homework.erb
+++ b/app/views/_student_homework.erb
@@ -17,7 +17,7 @@
         <% elsif task.complete %>
            <i class="material-icons right done-icon">done_all</i>
         <% end %>
-        <p>
+        <p class="">
           <%= task.item %> <br>
           <a class="" href="<%= task.url %>"><%= youtubify %></a>
         </p>
