--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -35,3 +35,17 @@ main {
 .comment-name {
   font-style: italic;
 }
+
+.card-padding {
+  margin: 5rem;
+}
+
+.h-3-spacing {
+   margin-top: 75px;
+   margin-bottom: 45px;
+}
+
+.title-comment {
+  font-size: 20px;
+  font-style: italic;
+}
