--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -40,6 +40,10 @@ main {
   margin: 5rem;
 }
 
+.comment-padding {
+  padding: 2rem;
+}
+
 .h-3-spacing {
    margin-top: 75px;
    margin-bottom: 45px;
@@ -48,4 +52,8 @@ main {
 .title-comment {
   font-size: 20px;
   font-style: italic;
+}
+
+.icon-gold {
+  color: #ffc400;
 }
