--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,4 +1,7 @@
-<h1>Where someone can login</h1>
+<h3 class="center h-3-spacing">
+  Login<br>
+  <span class="title-comment">(Good news awaits)</span>
+</h3>
 
 <% if session["error"] %>
   <div>
@@ -7,8 +10,31 @@
   </div>
 <% end %>
 
-<form method="post" action="/login">
+<!-- <form method="post" action="/login">
   <input type="text" name="username">
   <input type="password" name="password">
   <input type="submit" value="Submit">
-</form>
+</form> -->
+
+<div class="row">
+  <div class="col s12">
+    <div class="card-panel hoverable">
+      <form class="card-padding" method="post" action="/login">
+        <div>
+          <label>Username:</label>
+          <input type="text" name="username">
+        </div>
+        <div>
+          <label>Password:</label>
+          <input type="password" name="password">
+        </div>
+        <div class="center button-spacing">
+          <button class="btn waves-effect waves-light" type="submit" name="action" value="Submit">
+            Login
+            <i class="material-icons right">send</i>
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
