--- a/app/views/teacher/homework.erb
+++ b/app/views/teacher/homework.erb
@@ -1,4 +1,4 @@
-<h3 class="center"><%= @student.name %>'s homework assignments:</h3>
+<h3 class="center h-3-spacings"><%= @student.name %>'s homework assignments:</h3>
 <div class="row">
   <div class="col s6 offset-s2">
     <a class="btn-floating waves-effect waves-light green" href="/teacher/students/<%= @student.id %>/homework/new"><i class="material-icons">assignment</i></a>
@@ -9,7 +9,10 @@
   <% @student.homeworks.map do |homework| %>
     <div class="row">
       <div class="col s10 offset-s1">
-        <div class="card-panel">
+        <div class="card-panel hoverable">
+          <% unless homework.tasks.where("complete = ? OR complete IS NULL", false).any? == true %>
+              <i class="material-icons right icon-gold">stars</i>
+          <% end %>
           <span class="">
             <blockquote class="">
               <h5><%= homework.title %></h5>
@@ -17,11 +20,11 @@
                 <%= homework.note %>
               </p>
               <p>
-                <%= homework.tasks.count %> tasks assigned
+                <%= homework.tasks.where("complete = ? OR complete IS NULL", false).count %> tasks outstanding!
               </p>
             </blockquote>
             <div class="card-action">
-              <a class="link-text" href="/teacher/students/<%= @student.id %>/homework/<%= homework.id %>">View Homework <i class="material-icons right">trending_flat</i></a>
+              <a href="/teacher/students/<%= @student.id %>/homework/<%= homework.id %>">View Homework <i class="material-icons right">send</i></a>
             </div>
           </span>
         </div>
