--- a/app/views/teacher/index.erb
+++ b/app/views/teacher/index.erb
@@ -8,7 +8,7 @@
 <% current_user.students.each do | student | %>
   <div class="row">
     <div class="col s8 offset-s2">
-      <div class="card-panel">
+      <div class="card-panel hoverable">
         <span class="">
           <blockquote class="">
             <h5><%= student.name %></h5>
