--- a/app/views/teacher/new_student.erb
+++ b/app/views/teacher/new_student.erb
@@ -3,7 +3,6 @@
   <span class="title-comment">(and your parents said music was a dumb choice!)</span>
 </h3>
 
-
 <% if @student.errors.any? %>
   <div>
     <strong>Some issues with your entry, please fix them:</strong>
@@ -17,7 +16,8 @@
 
 <div class="row">
   <div class="col s12">
-    <div class="card-panel">
+    <div class="card-panel hoverable">
+      <h5 class="center">Add a student</h5>
       <form class="card-padding" method="post" action="/teacher/students">
         <div>
           <label>Student Name:</label>
@@ -31,13 +31,12 @@
           <label>Password:</label>
           <input type="text" name="password" value="<%= @student.password %>">
         </div>
-        <button class="btn waves-effect waves-light" type="submit" name="action" value="Create">
-          Submit
-          <i class="material-icons right">send</i>
-        </button>
-        <!-- <div>
-          <input class="file-path validate" type="submit"  >
-        </div> -->
+        <div class="center button-spacing">
+          <button class="btn waves-effect waves-light" type="submit" name="action" value="Create">
+            Submit
+            <i class="material-icons right">send</i>
+          </button>
+        </div>
       </form>
     </div>
   </div>
