--- a/app/views/teacher/edit_homework.erb
+++ b/app/views/teacher/edit_homework.erb
@@ -1,16 +1,59 @@
-<h1>Here goes note editing</h1>
-<form method="post" action="/teacher/homework/edit">
-  <input type="hidden" name="homework" value="<%= @homework.id %>" >
-  <input type="hidden" name="student" value="<%= @student.id %>" >
-  <input type="text" name="title" value="<%= @homework.title %>" >
-  <input type="text" name="note" value="<%= @homework.note %>" >
+<h3 class="center button-spacing">Edit Homework For <%= @student.name %></h3>
 
-  <% @homework.tasks.each do |task| %>
-    <input type="text" name="item<%= task.id %>" value="<%= task.item %>" >
-    <input type="text" name="url<%= task.id %>" value="<%= task.url %>" >
-  <% end %>
+<div class="row button-spacing">
+  <form class="col s8 offset-s2" action="/teacher/homework/edit" method="post">
+    <input type="hidden" name="homework" value="<%= @homework.id %>" >
+    <input type="hidden" name="student" value="<%= @student.id %>" >
 
-  <input type="submit" name="submit" value="Submit">
-</form>
+    <div class="row">
+      <h5 class="button-spacing"><strong>Homework Title</strong></h5>
+      <div class="input-field col s12">
+        <input id="homework_title" type="text" class="validate" name="title" value="<%= @homework.title %>" >
+        <label class="active" for="homework_title"></label>
+      </div>
+    </div>
 
-<a href="/teacher/students/<%= @student.id %>/homework/<%= @homework.id %>">go back</a>
+    <div class="row">
+      <h5 class="button-spacing"><strong>Notes from lesson</strong></h5>
+      <div class="input-field col s12">
+        <input id="lesson_notes" type="text" class="validate" name="note" value="<%= @homework.note %>" >
+        <label class="active" for="lesson_notes"></label>
+      </div>
+    </div>
+
+    <h5 class="button-spacing"><strong>Tasks for the homework</strong></h5>
+    <div class="row">
+      <ul class="collection">
+        <% @homework.tasks.each do |task| %>
+          <!--li class="collection-item"-->
+            <div class="input-field col s8">
+              <input id="item<%= task.id %>" type="text" class="validate" name="item<%= task.id %>" value="<%= task.item %>">
+              <label class="active" for="item<%= task.id %>"></label>
+            </div>
+
+            <div class="input-field col s4">
+              <input id="url<%= task.id %>" type="text" class="validate" name="url<%= task.id %>" value="<%= task.url %>">
+              <label class="active" for="item<%= task.id %>"></label>
+            </div>
+          <!--/li-->
+        <% end %>
+      </ul>
+    </div>
+
+    <div class="center">
+      <button class="btn waves-effect waves-light button-spacing green" type="submit" name="action" value="submit">
+        Update!
+      </button>
+      <button class="btn waves-effect waves-light button-spacing green" name="cancel" onclick="goBack(student, homework)">
+        Cancel
+      </button>
+    </div>
+  </form>
+</div>
+
+<script>
+  function goBack(student, homework) {
+    //a href="/teacher/students/<%= @student.id %>/homework/<%= @homework.id %>">go back</a>-->
+    window.history.go(-1);
+  }
+</script>
