--- a/app/views/teacher/edit_homework.erb
+++ b/app/views/teacher/edit_homework.erb
@@ -1,5 +1,6 @@
 <h3 class="center button-spacing">Edit homework for: <%= @student.name %></h3>
 <button class="btn-floating waves-effect waves-light red" name="Cancel" onclick="goBack()">
+<!-- <button class="btn-floating waves-effect waves-light red" name="cancel" onclick="goBack(student, homework)"> -->
   <i class="material-icons">cancel</i>
 </button>
 <div class="row button-spacing">
